src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Bca__c</fullName>
        <label>Active BCA</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adult_Undergraduate_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Adult Undergraduate Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_del__c</fullName>
        <label>Age</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alien_Registration_Number_Date__c</fullName>
        <description>The Alien Registration Number Date if person is a Permanent Resident Alien</description>
        <inlineHelpText>The Alien Registration Number Date if person is a Permanent Resident Alien</inlineHelpText>
        <label>Alien Registration Number Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alien_Registration_Number__c</fullName>
        <description>The Alien Registration Number if person is a Permanent Resident Alien</description>
        <inlineHelpText>The Alien Registration Number if person is a Permanent Resident Alien</inlineHelpText>
        <label>Alien Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Id__c</fullName>
        <description>Banner identifier for this person</description>
        <externalId>true</externalId>
        <inlineHelpText>Banner identifier for this person</inlineHelpText>
        <label>Banner ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Banner_Roles__c</fullName>
        <label>Banner Roles</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bca_Username__c</fullName>
        <label>BCA Username</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bethel_Attempted_Credits__c</fullName>
        <label>Credits Attempted at Bethel</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bethel_Credits_Earned__c</fullName>
        <label>Credits Earned at Bethel</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bethel_ID_Photo__c</fullName>
        <description>Uses UDCID from Banner to load Bethel ID photo.</description>
        <formula>IF(NOT(ISBLANK(UDCID__c)), IMAGE(&apos;https://bsp-nas-dav.bethel.edu/IMAGES/ID_PHOTOS_MASTER/&apos;+ UDCID__c + &apos;.JPG&apos;,FirstName + &quot; &quot; + LastName ,172,155), 
&quot;No ID photo in Banner.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bethel ID Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <description>Specifies the U.S. Citizenship status</description>
        <inlineHelpText>Specifies the U.S. Citizenship status</inlineHelpText>
        <label>U. S. Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Citizen</fullName>
                </value>
                <value>
                    <fullName>Permanent Resident Alien</fullName>
                </value>
                <value>
                    <fullName>Not Citizen or Permanent Resident</fullName>
                </value>
                <value>
                    <fullName>Foreign Citizen</fullName>
                    <isActive>false</isActive>
                    <label>Foreign Citizen</label>
                </value>
                <value>
                    <fullName>Non Resident</fullName>
                    <isActive>false</isActive>
                    <label>Non Resident</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Permanent U.S. Resident</fullName>
                    <isActive>false</isActive>
                    <label>Permanent U.S. Resident</label>
                </value>
                <value>
                    <fullName>Temporary U.S. Resident</fullName>
                    <isActive>false</isActive>
                    <label>Temporary U.S. Resident</label>
                </value>
                <value>
                    <fullName>U.S. Citizen</fullName>
                    <isActive>false</isActive>
                    <label>U.S. Citizen</label>
                </value>
                <value>
                    <fullName>U.S. Dual Citizen</fullName>
                    <isActive>false</isActive>
                    <label>U.S. Dual Citizen</label>
                </value>
                <value>
                    <fullName>U.S. Permanent</fullName>
                    <isActive>false</isActive>
                    <label>U.S. Permanent</label>
                </value>
                <value>
                    <fullName>U.S. Permanent Resident</fullName>
                    <isActive>false</isActive>
                    <label>U.S. Permanent Resident</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <isActive>false</isActive>
                    <label>Y</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cleaned_Address__c</fullName>
        <label>Address Has Been Cleaned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs Cleaning</fullName>
                </value>
                <value>
                    <fullName>Cleaned with Error</fullName>
                </value>
                <value>
                    <fullName>Cleaned</fullName>
                </value>
                <value>
                    <fullName>Overridden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field from Banner to indicate confidentiality; APAIDEN
Only for Student Success</description>
        <inlineHelpText>From Banner, whether student has confidentiality flag.</inlineHelpText>
        <label>Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Constituent_ID__c</fullName>
        <description>A unique external ID field to house a prospect or student&apos;s ID for integration or manual data loading processes. It is also the identification code to be used for Contact Matching Rules as part of the Interaction process.</description>
        <label>Constituent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conviction_Description__c</fullName>
        <label>Description of Conviction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Black_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Black List</label>
        <referenceTo>DaScoopComposer__Black_List__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Domain__c</fullName>
        <description>describes the inferred email domain of the field Contact.Email</description>
        <formula>SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Email_2__c</fullName>
        <inlineHelpText>is the secondary email address of this contact</inlineHelpText>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Email_Domain__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>is an inferred hash key to improve performance. This field was deprecated.</inlineHelpText>
        <label>Email Domain and Contact Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_Create_Opportunity__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;006/e?conid=&apos; &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the URL of a &quot;Create Opportunity&quot; screen. It allows the user to create an opportunity with a contact role. This can be added to a Groove View and can be rendered as an action button in your email client.</inlineHelpText>
        <label>Create Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_LinkedIn__c</fullName>
        <formula>&apos;https://www.linkedin.com/search/results/index/?keywords=&apos; &amp;
SUBSTITUTE(SUBSTITUTE(FirstName, &quot; &quot;, &quot;+&quot;), &quot;&amp;&quot;, &quot;%26&quot;) &amp; &apos;+&apos;
&amp; SUBSTITUTE(SUBSTITUTE(LastName, &quot; &quot;, &quot;+&quot;), &quot;&amp;&quot;, &quot;%26&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the URL of a &quot;LinkedIn&quot; lookup screen. This can be added to a Groove View and can be rendered as an action button in your email client.</inlineHelpText>
        <label>LinkedIn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_Log_a_Call__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;00T/e?title=Call&amp;who_id=&apos; &amp; Id &amp; &apos;&amp;followup=1&amp;tsk5=Call&amp;retURL=%2F&apos; &amp; Id &amp; &apos;&amp;ent=Task&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the URL of a &quot;Log a Call&quot; screen. This can be added to a Groove View and can be rendered as an action button in your email client.</inlineHelpText>
        <label>Log a Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_Notes__c</fullName>
        <inlineHelpText>Contains notes that are surfaced in Groove&apos;s sidebar by default.</inlineHelpText>
        <label>Groove Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Lookup_Mobile__c</fullName>
        <formula>RIGHT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(MobilePhone), &apos;%&apos;, &apos;&apos;), &apos;~&apos;, &apos;&apos;), &apos;@&apos;, &apos;&apos;) , &apos;&gt;&apos;, &apos;&apos;) , &apos;=&apos;, &apos;&apos;) , &apos;&lt;&apos;, &apos;&apos;) , &apos; &apos;, &apos;&apos;) , &apos;o&apos;, &apos;&apos;) , &apos;}&apos;, &apos;&apos;) , &apos;|&apos;, &apos;&apos;) , &apos;{&apos;, &apos;&apos;) , &apos;z&apos;, &apos;&apos;) , &apos;y&apos;, &apos;&apos;) , &apos;x&apos;, &apos;&apos;) , &apos;w&apos;, &apos;&apos;) , &apos;v&apos;, &apos;&apos;) , &apos;u&apos;, &apos;&apos;) , &apos;t&apos;, &apos;&apos;) , &apos;s&apos;, &apos;&apos;) , &apos;r&apos;, &apos;&apos;) , &apos;q&apos;, &apos;&apos;) , &apos;p&apos;, &apos;&apos;) , &apos;n&apos;, &apos;&apos;) , &apos;m&apos;, &apos;&apos;) , &apos;l&apos;, &apos;&apos;) , &apos;k&apos;, &apos;&apos;) , &apos;j&apos;, &apos;&apos;) , &apos;i&apos;, &apos;&apos;) , &apos;h&apos;, &apos;&apos;) , &apos;g&apos;, &apos;&apos;) , &apos;f&apos;, &apos;&apos;) , &apos;e&apos;, &apos;&apos;) , &apos;d&apos;, &apos;&apos;) , &apos;c&apos;, &apos;&apos;) , &apos;b&apos;, &apos;&apos;) , &apos;a&apos;, &apos;&apos;) , &apos;_&apos;, &apos;&apos;) , &apos;^&apos;, &apos;&apos;) , &apos;]&apos;, &apos;&apos;) , &apos;\\&apos;, &apos;&apos;) , &apos;[&apos;, &apos;&apos;) , &apos;?&apos;, &apos;&apos;) , &apos;;&apos;, &apos;&apos;) , &apos;:&apos;, &apos;&apos;) , &apos;/&apos;, &apos;&apos;) , &apos;.&apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;) , &apos;,&apos;, &apos;&apos;) , &apos;+&apos;, &apos;&apos;) , &apos;*&apos;, &apos;&apos;) , &apos;)&apos;, &apos;&apos;) , &apos;(&apos;, &apos;&apos;) , &apos;&amp;&apos;, &apos;&apos;) , &apos;$&apos;, &apos;&apos;) , &apos;#&apos;, &apos;&apos;) , &apos;&quot;&apos;, &apos;&apos;) , &apos;!&apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;),9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lookup Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Lookup_Phone__c</fullName>
        <formula>RIGHT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(Phone), &apos;%&apos;, &apos;&apos;), &apos;~&apos;, &apos;&apos;), &apos;@&apos;, &apos;&apos;) , &apos;&gt;&apos;, &apos;&apos;) , &apos;=&apos;, &apos;&apos;) , &apos;&lt;&apos;, &apos;&apos;) , &apos; &apos;, &apos;&apos;) , &apos;o&apos;, &apos;&apos;) , &apos;}&apos;, &apos;&apos;) , &apos;|&apos;, &apos;&apos;) , &apos;{&apos;, &apos;&apos;) , &apos;z&apos;, &apos;&apos;) , &apos;y&apos;, &apos;&apos;) , &apos;x&apos;, &apos;&apos;) , &apos;w&apos;, &apos;&apos;) , &apos;v&apos;, &apos;&apos;) , &apos;u&apos;, &apos;&apos;) , &apos;t&apos;, &apos;&apos;) , &apos;s&apos;, &apos;&apos;) , &apos;r&apos;, &apos;&apos;) , &apos;q&apos;, &apos;&apos;) , &apos;p&apos;, &apos;&apos;) , &apos;n&apos;, &apos;&apos;) , &apos;m&apos;, &apos;&apos;) , &apos;l&apos;, &apos;&apos;) , &apos;k&apos;, &apos;&apos;) , &apos;j&apos;, &apos;&apos;) , &apos;i&apos;, &apos;&apos;) , &apos;h&apos;, &apos;&apos;) , &apos;g&apos;, &apos;&apos;) , &apos;f&apos;, &apos;&apos;) , &apos;e&apos;, &apos;&apos;) , &apos;d&apos;, &apos;&apos;) , &apos;c&apos;, &apos;&apos;) , &apos;b&apos;, &apos;&apos;) , &apos;a&apos;, &apos;&apos;) , &apos;_&apos;, &apos;&apos;) , &apos;^&apos;, &apos;&apos;) , &apos;]&apos;, &apos;&apos;) , &apos;\\&apos;, &apos;&apos;) , &apos;[&apos;, &apos;&apos;) , &apos;?&apos;, &apos;&apos;) , &apos;;&apos;, &apos;&apos;) , &apos;:&apos;, &apos;&apos;) , &apos;/&apos;, &apos;&apos;) , &apos;.&apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;) , &apos;,&apos;, &apos;&apos;) , &apos;+&apos;, &apos;&apos;) , &apos;*&apos;, &apos;&apos;) , &apos;)&apos;, &apos;&apos;) , &apos;(&apos;, &apos;&apos;) , &apos;&amp;&apos;, &apos;&apos;) , &apos;$&apos;, &apos;&apos;) , &apos;#&apos;, &apos;&apos;) , &apos;&quot;&apos;, &apos;&apos;) , &apos;!&apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;),9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lookup Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Normalized_Mobile__c</fullName>
        <description>Contains the last 9 digits of the mobile phone number, without non-numeric characters.</description>
        <inlineHelpText>Managed by Groove.</inlineHelpText>
        <label>Normalized Mobile</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Normalized_Phone__c</fullName>
        <description>Contains the last 9 digits of the phone number, without non-numeric characters.</description>
        <inlineHelpText>Managed by Groove.</inlineHelpText>
        <label>Normalized Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Activity__c</fullName>
        <description>Calculates number of days since date in Last Activity Date field</description>
        <formula>TODAY() - Last_Activity_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Denomination_Description__c</fullName>
        <description>Values determined by Inst. Research looking at Banner values; STVRELG</description>
        <label>Denomination Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Denominations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Five_Digit_Postal_Code__c</fullName>
        <description>Used for Conga Reports and Merge Files</description>
        <formula>LEFT(MailingPostalCode, 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Five Digit Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_Last_Name__c</fullName>
        <label>Former Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduate_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Graduate Role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_High_School_Diploma__c</fullName>
        <description>BUILD Question: Did you receive a high school diploma or equivalent?</description>
        <label>Has High School Diploma</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_School_GPA__c</fullName>
        <description>Returns GPA if there is only one primary High School Education History, Otherwise returns 0 until there is one, or the data is cleaned up if more than one.</description>
        <formula>IF( 
    Number_of_High_School__c = 1, 
    Max_High_School_GPA__c, 
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>High School GPA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_School_Graduation_Year__c</fullName>
        <description>The high school graduation year</description>
        <inlineHelpText>The high school graduation year</inlineHelpText>
        <label>High School Graduation Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highest_ACT_Score__c</fullName>
        <description>Rollup of the highest ACT Score</description>
        <inlineHelpText>Rollup of the highest ACT Score</inlineHelpText>
        <label>Highest ACT Score</label>
        <summarizedField>Test_Score__c.ACT_Composite_Score__c</summarizedField>
        <summaryFilterItems>
            <field>Test_Score__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>ACT</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Score__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Highest_SAT_Score__c</fullName>
        <description>Rollup of the highest SAT Score</description>
        <inlineHelpText>Rollup of the highest SAT Score</inlineHelpText>
        <label>Highest SAT Score</label>
        <summarizedField>Test_Score__c.SAT_Composite_Score__c</summarizedField>
        <summaryFilterItems>
            <field>Test_Score__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>SAT</value>
        </summaryFilterItems>
        <summaryForeignKey>Test_Score__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_English_Primary_Language__c</fullName>
        <description>Specifies if the person&apos;s primary language is English. If it is not English, the primary language should be specified in the Primary Language field.</description>
        <inlineHelpText>Specifies if the person&apos;s primary language is English.</inlineHelpText>
        <label>Is English Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Faculty_Staff__c</fullName>
        <description>Uses Banner Roles field to mark if Contact has a Faculty or Staff role</description>
        <formula>if( 
OR( 
CONTAINS(Banner_Roles__c, &quot;staff&quot;), 
CONTAINS(Banner_Roles__c, &quot;faculty&quot;) 
), 
TRUE, 
FALSE 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Faculty or Staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Hispanic__c</fullName>
        <description>Specifies if the person considers themselves to be Hispanic or Latino</description>
        <inlineHelpText>Specifies if the person considers themselves to be Hispanic or Latino</inlineHelpText>
        <label>Is Hispanic or Latino</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_International__c</fullName>
        <description>Used for the CAS Counselors assignment rules.</description>
        <formula>MailingCountry != null &amp;&amp; MailingCountry != &apos;United States&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is International</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Veteran__c</fullName>
        <description>Specifies if the person is a Veteran or is eligible for military benefits</description>
        <inlineHelpText>Specifies if the person is a Veteran or is eligible for military benefits</inlineHelpText>
        <label>Is Veteran</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mailing_State_Code__c</fullName>
        <description>Pulls the State Code out of the Mailing State field</description>
        <formula>CASE( MailingState,&apos;AL&apos;,&apos;Alabama&apos;,
&apos;AK&apos;,&apos;Alaska&apos;,
&apos;AZ&apos;,&apos;Arizona&apos;,
&apos;AR&apos;,&apos;Arkansas&apos;,
&apos;CA&apos;,&apos;California&apos;,
&apos;CO&apos;,&apos;Colorado&apos;,
&apos;CT&apos;,&apos;Connecticut&apos;,
&apos;DE&apos;,&apos;Delaware&apos;,
&apos;FL&apos;,&apos;Florida&apos;,
&apos;GA&apos;,&apos;Georgia&apos;,
&apos;HI&apos;,&apos;Hawaii&apos;,
&apos;ID&apos;,&apos;Idaho&apos;,
&apos;IL&apos;,&apos;Illinois&apos;,
&apos;IN&apos;,&apos;Indiana&apos;,
&apos;IA&apos;,&apos;Iowa&apos;,
&apos;KS&apos;,&apos;Kansas&apos;,
&apos;KY&apos;,&apos;Kentucky&apos;,
&apos;LA&apos;,&apos;Louisiana&apos;,
&apos;ME&apos;,&apos;Maine&apos;,
&apos;MD&apos;,&apos;Maryland&apos;,
&apos;MA&apos;,&apos;Massachusetts&apos;,
&apos;MI&apos;,&apos;Michigan&apos;,
&apos;MN&apos;,&apos;Minnesota&apos;,
&apos;MS&apos;,&apos;Mississippi&apos;,
&apos;MO&apos;,&apos;Missouri&apos;,
&apos;MT&apos;,&apos;Montana&apos;,
&apos;NE&apos;,&apos;Nebraska&apos;,
&apos;NV&apos;,&apos;Nevada&apos;,
&apos;NH&apos;,&apos;New Hampshire&apos;,
&apos;NJ&apos;,&apos;New Jersey&apos;,
&apos;NM&apos;,&apos;New Mexico&apos;,
&apos;NY&apos;,&apos;New York&apos;,
&apos;NC&apos;,&apos;North Carolina&apos;,
&apos;ND&apos;,&apos;North Dakota&apos;,
&apos;OH&apos;,&apos;Ohio&apos;,
&apos;OK&apos;,&apos;Oklahoma&apos;,
&apos;OR&apos;,&apos;Oregon&apos;,
&apos;PA&apos;,&apos;Pennsylvania&apos;,
&apos;RI&apos;,&apos;Rhode Island&apos;,
&apos;SC&apos;,&apos;South Carolina&apos;,
&apos;SD&apos;,&apos;South Dakota&apos;,
&apos;TN&apos;,&apos;Tennessee&apos;,
&apos;TX&apos;,&apos;Texas&apos;,
&apos;UT&apos;,&apos;Utah&apos;,
&apos;VT&apos;,&apos;Vermont&apos;,
&apos;VA&apos;,&apos;Virginia&apos;,
&apos;WA&apos;,&apos;Washington&apos;,
&apos;WV&apos;,&apos;West Virginia&apos;,
&apos;WI&apos;,&apos;Wisconsin&apos;,
&apos;WY&apos;,&apos;Wyoming&apos;,
&apos;Other&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing State Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_High_School_GPA__c</fullName>
        <description>Used to calculate the &quot;High School GPA&quot; field, along with &quot;Number of High School Records&quot;. There should only be one HS record that meets these criteria. If there are 0 or more than 1, the &quot;High School GPA&quot; field won&apos;t return a GPA and the &quot;Number of High School Records&quot; field will trigger an Integrity Report for someone to look at and clean up the data.</description>
        <label>Max High School GPA</label>
        <summarizedField>Education_History__c.GPA__c</summarizedField>
        <summaryFilterItems>
            <field>Education_History__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>High School, High School</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Education_History__c.GPA__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Education_History__c.Document_Status__c</field>
            <operation>equals</operation>
            <value>Received, Conditional</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Education_History__c.Primary_GPA_Record__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Education_History__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Avatar_URL__c</fullName>
        <description>URL for the contact&apos;s avatar picture</description>
        <inlineHelpText>Enter the URL for this contact&apos;s avatar picture</inlineHelpText>
        <label>Mogli Avatar URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Default_Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Gateway</label>
        <referenceTo>Mogli_SMS__Gateway__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Mogli_Number__c</fullName>
        <description>This is the gateway formatted phone number</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the gateway formatted phone number</inlineHelpText>
        <label>Mogli Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Mogli_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mogli Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__SMS_Message_To_Send__c</fullName>
        <label>SMS Message To Send</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_Pronunciation__c</fullName>
        <label>Name Pronunciation</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_High_School__c</fullName>
        <description>A roll-up count of the Education Histories where Doc Status is Received or Conditional and Primary GPA Record is True. If this number is &gt;1, it should alert someone in an integrity report. Also used in the &quot;Cumulative GPA High School&quot; field.</description>
        <label>Number of High School Records</label>
        <summaryFilterItems>
            <field>Education_History__c.Document_Status__c</field>
            <operation>equals</operation>
            <value>Received</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Education_History__c.Primary_GPA_Record__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Education_History__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Holds__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of Holds this student has, which is loaded by Jitterbit. If it is above 0, display a LWC with a summary of the holds.</description>
        <label>Number of Holds</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Org_Link__c</fullName>
        <formula>IF( 
NOT(ISBLANK(Previous_Contact_ID__c)), 
&quot;https://bethel-university-old.my.salesforce.com/&quot;+ Previous_Contact_ID__c, 
&quot;&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Org Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIDM__c</fullName>
        <description>Loads from Banner</description>
        <label>PIDM</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pled_Guilty__c</fullName>
        <label>Has Pled Guilty to a Crime</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_First_Name__c</fullName>
        <description>The Preferred First Name of the person</description>
        <inlineHelpText>The Preferred First Name of the person</inlineHelpText>
        <label>Preferred First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Name_Calculated__c</fullName>
        <description>Returns Preferred name if it exists, otherwise returns First Name</description>
        <formula>IF(Preferred_First_Name__c = &apos;&apos;, FirstName, Preferred_First_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Name Calculated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Contact_ID__c</fullName>
        <description>Contact ID from our previous SF org. Used to verify data migration. Delete when no longer needed.</description>
        <externalId>true</externalId>
        <label>Previous Contact ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary_Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Academic Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Academic_Program_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Department</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Department Members</relationshipLabel>
        <relationshipName>Department_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Educational_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Educational Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Institution Members</relationshipLabel>
        <relationshipName>Institution_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <description>The primary language of the person</description>
        <inlineHelpText>The primary language of the person</inlineHelpText>
        <label>Primary Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Sports_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Sports Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Organization Members</relationshipLabel>
        <relationshipName>Sport_Organization_Members</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>